--- a/src/index.css
+++ b/src/index.css
@@ -106,7 +106,12 @@ h2 {
 
 section {
   margin-top: 7.5rem;
-  height: 100vh;
+  min-height: 100vh;
+  width: 100vw;
+  padding-top: 6rem;
+  height: auto;
+  position: relative;
+  overflow: visible;
 }
 
 section > h4, section > h5 {
